Fix card alignment via grid

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ a:visited {
 	display: flex;
 	width: 100%;
 	justify-content: center;
-	background-color: rgba(255, 255, 255, 0.699);
+	background-color: rgba(255, 255, 255, 0.836);
 	padding: 1rem;
 	border-radius: 0.3rem;
 	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.205);
@@ -112,14 +112,20 @@ a:visited {
 	cursor: pointer;
 }
 
-.card li,
 .card ul {
-	flex: 1;
+	display: grid;
+	grid-template-columns: 3fr 2fr 1fr 1fr;
+	grid-auto-flow: column;
+	gap: 3rem;
 }
 
-.card ul {
-	display: flex;
-	gap: 3rem;
+.card li {
+	align-self: center;
+}
+
+.card li:nth-child(1) {
+	text-align: left;
+	margin-left: 1rem;
 }
 
 .photo-credit {
@@ -266,8 +272,8 @@ footer * {
 		min-height: 50svh;
 	}
 
-	.hero>h1 {
-		margin-top: 7%;
+	.branding {
+		margin-top: 10%;
 	}
 
 	.form-card {
@@ -288,14 +294,14 @@ footer * {
 	}
 
 	.form-card li {
+		display: flex;
 		flex-direction: row;
-		align-items: center;
 	}
-
 
 	.form-card label {
 		padding: 0;
 		margin-right: 1rem;
+		text-align: right;
 	}
 
 	.form-card input {
